# CLIP_Perception

./: CMakeLists.txt  README.md  package.xml
src/: test.py
